# ogma

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  index.html  package-lock.json  package.json
.claude/skills/address-review/: SKILL.md
.claude/skills/pr-autopilot/: SKILL.md
.claude/skills/pr-reviews/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/ogma-core/: Cargo.toml
crates/ogma-core/examples/: import.rs
crates/ogma-core/src/: config.rs  error.rs  lib.rs  mcp.rs  models.rs  notion.rs  pipeline.rs  storage.rs
crates/ogma-core/src/providers/: claude.rs  mod.rs  whisper.rs
crates/ogma-core/src/recording/: import.rs  mod.rs  wake.rs  wav.rs
crates/ogma-core/src/sync/: apple_notes.rs  markdown.rs  mod.rs  render.rs
crates/ogma-core/tests/: recorder_integration.rs
docs/: RELEASING.md  ios-background-spike.md  sync-destinations-spike.md
plugins/tauri-plugin-audio-recorder/: Cargo.toml  README.md
plugins/tauri-plugin-audio-recorder/src/: desktop.rs  models.rs
src/: api.ts  dom.ts  format.ts  main.ts  status.ts  store.ts  styles.css  toast.ts  types.ts  updater.ts  view.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs
src/views/: detail.ts  home.ts  library.ts  record.ts  settings.ts  spike.ts
website/: README.md  next.config.mjs  package-lock.json  package.json
website/app/: layout.tsx  manifest.ts  opengraph-image.tsx  sitemap.ts  twitter-image.tsx
website/app/(home)/: app-demo.tsx  landing.css  layout.tsx  page.tsx
website/content/docs/: configuration.mdx  faq.mdx  getting-started.mdx  index.mdx  mcp.mdx  meta.json  notion.mdx  recording.mdx  transcripts-and-notes.mdx
website/lib/: shared.ts
