[workspace]
resolver = "2"
members = ["src-tauri", "crates/ogma-core"]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["David Ruiz"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"

[profile.dev]
# cpal underruns are miserable at opt-level 0; keep audio paths fast in dev
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
