[package]
name = "ogma"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Record, transcribe & note-take for in-person meetings"

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin name (Windows quirk,
# see https://github.com/rust-lang/cargo/issues/8519)
name = "ogma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ogma-core = { path = "../crates/ogma-core" }
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"

# Desktop-only (PLAN.md backlog #2): global shortcut for tray quick-start.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
