[package]
name = "ogma-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Ogma core: recording, storage, AI pipeline, Notion sync, MCP server"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait = "0.1"
cpal = "0.18"
rusqlite = { version = "0.40", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rmcp = { version = "2.2", features = ["server", "macros", "transport-io"] }
schemars = "1"

[dev-dependencies]
tempfile = "3"
